--- a/plantillas/templates/categorias.html
+++ b/plantillas/templates/categorias.html
@@ -28,14 +28,14 @@
                 <h2>Línea de Productos</h2>
             </div>
             <div class="filauno">
-                <a href="../templates/agua.html"><img src="../img/agua.png" alt=""></a>
-                <a href="../templates/cafe.html"><img src="../img/cafe.png" alt=""></a>
-                <a href="../templates/frituras.html"><img src="../img/fritura.png" alt=""></a>
-                <a href="../templates/gaseosas.html"><img src="../img/gaseosa.png" alt=""></a>
+                <a href="../templates/agua.html"><img class="imagenobj" src="../img/agua.png" alt=""></a>
+                <a href="../templates/cafe.html"><img class="imagenobj" src="../img/cafe.png" alt=""></a>
+                <a href="../templates/frituras.html"><img class="imagenobj" src="../img/fritura.png" alt=""></a>
+                <a href="../templates/gaseosas.html"><img class="imagenobj" src="../img/gaseosa.png" alt=""></a>
             </div>
             <div class="filados">
-                <a href="../templates/jugos.html"> <img src="../img/jugos.png" alt=""></a>
-                <a href="../templates/panaderia.html"><img src="../img/panaderia.png" alt=""></a>
+                <a href="../templates/jugos.html"> <img class="imagenobj" src="../img/jugos.png" alt=""></a>
+                <a href="../templates/panaderia.html"><img class="imagenobj" src="../img/panaderia.png" alt=""></a>
                
                 
             </div>
