--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -23,7 +23,7 @@
             <nav class="navegacion">
                 <ul>
                     <!-- <li><a href="#">Inicio</a></li> -->
-                    <li><a href="../templates/categorias.html">Categorias</a></li>
+                    <li><a href="../templates/categorias.html">Productos</a></li>
                     <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
@@ -42,10 +42,10 @@
             </div>
             <div class="filados">
 
-                <div class="subtitulo">
+                <div id="subtitulo" class="subtitulo">
                     <h2>Nosotros</h2>
                 </div>
-                <div class="parrafo">
+                <div id="nosotros" class="parrafo">
                     <p>Industria La Cigarra S.A.S. Lleva 77 años de existencia y siendo unas de las empresas más
                         consolidadas y solidas de la región. Fundada por el ciudadano pastuso Isaac Zamora el 27 de
                         agosto de 1944 quien apoyado del empresario Sr Hernando Suarez Burgos en el año de 1984 dio
@@ -55,19 +55,11 @@
                         comenzara a mejorar. No fue una tarea fácil. A pesar de todos los esfuerzos desplegados, durante
                         11 años no se lograron ganancias importantes, hasta que finalmente los sacrificios dieron sus
                         frutos y la empresa se estabilizó y entró por la ruta del progreso que la caracteriza hoy.</p>
-                    <!-- <br>
-                    <p>Gran parte de la etapa de esplendor que hoy vive La Cigarra, se debe a la enorme aceptación por
-                        parte del pueblo nariñense. Desde un principio se procuró que las gaseosas estuvieran en todos
-                        los rincones del departamento. Ahora, se consumen en gran escala en Nariño, Cauca y Putumayo,
-                        donde la comunidad reconoce la calidad de estos productos que salen a la comercialización,
-                        gracias a un esfuerzo netamente de personas de la región, que sienten el orgullo de ser
-                        protagonista en su elaboración. Lo cierto es que hoy en día La Cigarra ocupa un vasto espacio en
-                        el corazón de la gente de Nariño, por todo lo que representa para esta región sur del país, en
-                        materia de desarrollo empresarial y generación de empleo.</p> -->
+                    
                 </div>
                 <div class="imagen">
 
-                    <img src="../img/lacigarralocal.jpg" alt="">
+                    <img id="imagenobj" src="../img/lacigarralocal.jpg" alt="">
                     <div class="div">
                         <h3>Nuestros Objetivos</h3>
                         <ul>
@@ -83,7 +75,7 @@
                     </div>
                 </div>
                 <div class="section">
-                    <div class="seccionuno">
+                    <div id="seccionuno" class="seccionuno">
                         <div class="subtitulo">
                             <h2>Políticas de Calidad</h2>
                         </div>
@@ -142,7 +134,7 @@
                                 calidad y lograr la máxima satisfacción en nuestros clientes.</li>
                         </ul>
                     </div>
-                    <img src="../img/lacigarralocal2.jpg" alt="">
+                    <img id="i" src="../img/lacigarralocal2.jpg" alt="">
                 </div>
 
 
@@ -164,6 +156,7 @@
         </div>
 
     </main>
+    <script src="../js/efectos.js"></script>
 </body>
 
 </html>
