--- a/plantillas/css/estilos.css
+++ b/plantillas/css/estilos.css
@@ -224,8 +224,6 @@ body{
 .contenedorlogin .zonalogin .cuerpo{
     grid-area: section;
     display: flex;
-    
-    
 }
 
 
@@ -235,6 +233,7 @@ body{
     display: flex;
     justify-content: space-around;
 }
+
 .contenedorlogin .zonalogin .useradmin h5{
     width: 40%;
     height: 50px;
@@ -242,8 +241,8 @@ body{
     text-shadow: 1px 1px 1px #3d1868;
     display: flex;
     margin: auto;
-    
 }
+
 .contenedorlogin .zonalogin .useradmin h5 a{
     text-decoration: none;
     width: 100%;
@@ -253,7 +252,6 @@ body{
     text-align: center;
     background-color:#3d1868;
     border-radius: 10px;
-
 }
 
 .contenedorlogin .zonalogin .cuerpo form{
@@ -261,9 +259,9 @@ body{
     width: 100%;
     height: auto;
     margin: auto;
-    padding: 20px;
-    
+    padding: 20px;  
 }
+
 
 .contenedorlogin .zonalogin .cuerpo form label{
     display: block;
@@ -351,6 +349,22 @@ body{
     margin: 20px;
     font-size: 2em;
 }
+
+
+.imagenobj:hover{
+    transform: scale(1.12,1.12);
+    transition: 2s;
+    /* -ms-transform: scale(0.5, 0.5);
+    -webkit-transform: scale(0.5, 0.5); */
+}
+
+
+/* 
+#i:hover{
+    transform: scale(1.25,1.25);
+    transition: 2s;
+} */
+
 
 /* 
 label{
