--- a/plantillas/templates/categorias.html
+++ b/plantillas/templates/categorias.html
@@ -9,6 +9,9 @@
     <title>Inicio</title>
 </head>
 <body>
+    <video src="../img/gaseosaslacigarra.mp4" autoplay loop muted>
+                    
+    </video>
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -16,9 +19,9 @@
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="../templates/inicio.html">Inicio</a></li>
-                    <!-- <li><a href="#">Reseña</a></li>
-                    <li><a href="#">Nosotros</a></li> -->
+                    <li class="activo"><a href="../templates/inicio.html">Inicio</a></li>
+                    <!-- <li><a href="#">Reseña</a></li>-->
+                    <li><a href="../templates/contactos.html">Contacto</a></li> 
                     <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
