--- a/plantillas/templates/login.html
+++ b/plantillas/templates/login.html
@@ -10,6 +10,9 @@
     <title>Inicio</title>
 </head>
 <body>
+    <video src="../img/gaseosaslacigarra.mp4" autoplay loop muted>
+                    
+    </video>
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -17,7 +20,7 @@
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="../templates/inicio.html"><i class="far fa-home-alt"></i>&nbsp; Inicio</a></li>
+                    <li class="activo"><a href="../templates/inicio.html"><i class="far fa-home-alt"></i>&nbsp; Inicio</a></li>
                     <!-- <li><a href="../templates/categorias.html">Categorias</a></li>
                     <li><a href="#">Contactos</a></li>
                     <span hidden="true"></span> -->
