--- a/plantillas/css/estilos.css
+++ b/plantillas/css/estilos.css
@@ -5,11 +5,11 @@
 
 body{
     
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url('../img/fondocigarra.jpg');
+    font-family: 'Titan One', cursive;
+    /* background-image: url('../img/fondocigarra.jpg');
     
     background-size: 100% 100%;
-    background-attachment: fixed;
+    background-attachment: fixed; */
     
     
 }
@@ -42,8 +42,7 @@ body{
 .cabecera .logo{
     width: 20%;
     margin: 10px auto;
-    
-    
+
 }
 
 .cabecera .logo img{
@@ -58,8 +57,6 @@ body{
     display: flex;
     align-items: center;
     border-radius: 10px;
-    
-
 }
 
 .navegacion ul{
@@ -166,7 +163,7 @@ body{
 .contenido .titulo h2{
     color: #fff;
     font-size: 4em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     text-shadow: 3px 1px 1px #3d1868;
 }
 
@@ -217,7 +214,16 @@ body{
     width: 100%;
     text-align: center;
     font-size: 1.8em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    text-shadow: 1px 1px 1px #3d1868;
+}
+
+.contenedorlogin .zonalogin .title h3{
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     text-shadow: 1px 1px 1px #3d1868;
 }
 
@@ -271,7 +277,7 @@ body{
     font-size: 1.2em;
     color: #fff;
     text-shadow: 1px 1px 1px #3d1868;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 .contenedorlogin .zonalogin .cuerpo form input{
@@ -283,6 +289,17 @@ body{
     border-radius: 8px;
     border: none;
     padding:4px;   
+}
+
+.contenedorlogin .zonalogin .cuerpo form textarea{
+    max-width: 100%;
+    max-height: 100px;
+    font-size: 1.2em;
+    border-radius: 8px;
+    border: none;
+    padding:4px;
+    resize:vertical;
+    font-family: 'Titan One', cursive;   
 }
 
 .contenedorlogin .zonalogin .cuerpo form .boton{
@@ -349,6 +366,9 @@ body{
     margin: 20px;
     font-size: 2em;
 }
+.navegacion ul .activo a{
+    color: #80106d;
+}
 
 
 .imagenobj:hover{
@@ -356,6 +376,17 @@ body{
     transition: 2s;
     /* -ms-transform: scale(0.5, 0.5);
     -webkit-transform: scale(0.5, 0.5); */
+}
+video{
+    z-index: -1;
+    position:fixed;
+    min-width: 100%;
+    min-height: 100%;
+    
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    
 }
 
 
