--- a/plantillas/css/estiloslineaproductos.css
+++ b/plantillas/css/estiloslineaproductos.css
@@ -5,11 +5,11 @@
 
 body{
     
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url('../img/fondocigarra.jpg');
+    font-family: 'Titan One', cursive;
+    /* background-image: url('../img/fondocigarra.jpg');
     
     background-size: 100% 100%;
-    background-attachment: fixed;
+    background-attachment: fixed; */
    
 }
 
@@ -113,8 +113,11 @@ body{
     text-align: center;
     
 }
+.navegacion ul .activo a{
+    color: #80106d;
+}
 
-/* video{
+video{
     z-index: -1;
     position:fixed;
     min-width: 100%;
@@ -124,7 +127,7 @@ body{
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     
-} */
+}
 
 .filauno div .imgcafe{
     /* width: 18%;
@@ -197,6 +200,8 @@ body{
     /* width: 10rem;
     height: auto; */
     border-radius: 10px;
+   
+    
     
     
 }
@@ -219,6 +224,7 @@ body{
     /* width: 18%;
     height: 35rem; */
     border-radius: 10px;
+    box-shadow: 1px 1px 10px 1px #3d1868;
 }
 
 .contenido .btnpedido{
@@ -235,15 +241,12 @@ body{
     border: none;
     border-radius: 8px;
     font-size: 1.4em;
-    font-family:'Times New Roman', Times, serif
+    /* font-family:'Times New Roman', Times, serif */
 }
 
 .btnpedido .btn:active{
     background-color: #663099;
 }
-
-
-
 
 .contenedor .contenido .description{
     grid-area: descripcion;
@@ -252,7 +255,6 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
     width: 50%;
-    
     
 }
 
@@ -263,13 +265,13 @@ body{
     margin-right: 98px;
     padding: 20px;
     color: #fff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     
 }
 
 .description p{
     color: #fff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     padding: 20px;
     line-height: 30px;
     text-align: center;
@@ -286,7 +288,7 @@ body{
 .contenido .title h2{
     color: #fff;
     font-size: 4em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     text-shadow: 3px 1px 1px #3d1868;
 }
 
@@ -294,10 +296,8 @@ body{
     grid-area: footer;
     text-align: center;
     color: #fff;
-   
 
 }
-
 
 .contenedor .piedepagina {
     grid-area: footer;
