--- a/plantillas/templates/frituras.html
+++ b/plantillas/templates/frituras.html
@@ -9,6 +9,9 @@
     <title>Línea de Frituras</title>
 </head>
 <body>
+    <video src="../img/frituras.mp4" autoplay loop muted>
+                    
+    </video>
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -16,10 +19,10 @@
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="../templates/inicio.html">Inicio</a></li>
+                    <li class="activo"><a href="../templates/inicio.html">Inicio</a></li>
                     <li><a href="../templates/categorias.html">Categorias</a></li>
-                    <li><a href="#">Contactos</a></li>
-                    <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li>
+                    <li><a href="../templates/contactos.html">Contactos</a></li>
+                    <!-- <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li> -->
                 </ul>
             </nav>
         </div>
