--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -15,6 +17,9 @@
 </head>
 
 <body>
+    <video src="../img/gaseosaslacigarra.mp4" autoplay loop muted>
+                    
+    </video>
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -22,9 +27,11 @@
             </div>
             <nav class="navegacion">
                 <ul>
-                    <!-- <li><a href="#">Inicio</a></li> -->
-                    <li><a href="../templates/categorias.html">Productos</a></li>
-                    <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
+                    <!-- <li><a href="../templates/contactos.html">Inicio</a></li> -->
+                    <li class="activo"><a href="../templates/categorias.html">Productos</a></li>
+                    <li><a href="../templates/contactos.html">Contactos</a></li>
+                    
+                    <!-- <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li> -->
                 </ul>
             </nav>
         </div>
