--- a/plantillas/templates/panaderia.html
+++ b/plantillas/templates/panaderia.html
@@ -9,9 +9,9 @@
     <title>Línea de Panadería</title>
 </head>
 <body>
-    <!-- <video src="../img/pan.mp4" autoplay loop muted>
+    <video src="../img/panaderia.mp4" autoplay loop muted>
                     
-    </video> -->
+    </video>
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
@@ -19,10 +19,10 @@
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="../templates/inicio.html">Inicio</a></li>
-                    <li><a href="../templates/categorias.html">Categorias</a></li>
-                    <li><a href="#">Contactos</a></li>
-                    <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
+                    <li class="activo"><a href="../templates/inicio.html">Inicio</a></li>
+                    <li><a href="../templates/categorias.html">Productos</a></li>
+                    <li><a href="../templates/contactos.html">Contactos</a></li>
+                    <!-- <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li> -->
                 </ul>
             </nav>
         </div>
