--- a/sitiogaseosaslacigarra/templates/categorias.html
+++ b/sitiogaseosaslacigarra/templates/categorias.html
@@ -9,7 +9,7 @@
     <title>Inicio</title>
 </head>
 <body>
-    <video src="../img/gaseosaslacigarra.mp4" autoplay loop muted>
+    <video src="../img/gaseosaslacigarra2.mp4" autoplay loop muted>
                     
     </video>
     <main class="contenedor">
@@ -22,7 +22,7 @@
                     <li class="activo"><a href="../index.html">Inicio</a></li>
                     <!-- <li><a href="#">Reseña</a></li>-->
                     <li><a href="../templates/contactos.html">Contacto</a></li> 
-                    <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
+                    <!-- <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -47,12 +47,23 @@
         <div class="piedepagina">
             <p>Copyright © 2021 Gaseosas la Cigarra</p>
             <div class="redessociales">
-                    <ul>
-                        <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
-                
+                <ul>
+                    <li><a href="https://es-la.facebook.com/gaseosaslacigarra/" target="_blank"><i
+                                class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/gaseosascigarra" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/gaseosaslacigarra/" target="_blank"><i
+                                class="fab fa-instagram"></i></a></li>
+                </ul>
+
+            </div>
+            <div class="contacto">
+                <ul>
+                    <li><i class="fas fa-phone-volume"></i> Local: 721 5384</li>
+                    <li><i class="fas fa-phone"></i> Móvil: 313 828 4715 / 316 546 2714</li>
+                    <li>Correo: lacigarra84@hotmail.com</li>
+                    <li>Dirección: Calle 12 No. 4-84 Barrio Chapal Pasto-Nariño</li>
+                </ul>
             </div>
         </div>
     </main>
